# tractian-data-foundry-etl

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
src/data_foundry/: config.py  main.py  quality.py  run_context.py
src/data_foundry/scripts/: 01_download.py  02_hash.py  03_describe.py  04_translate.py  05_translate_descriptions.py  06_covers.py  07_localized_catalog.py  08_universal_metadata.py  09_quality_check.py
tests/: test_outputs.py
tests/fixtures/: quality_report.json  run_manifest.json
tests/fixtures/brz/: catalog.json  hashes.json  metadata.json
tests/fixtures/gld/: localized_catalog.json  universal_metadata.json
tests/fixtures/slv/: covers.json  descriptions.json  translations.json
