[project]
name = "dominio-publico-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "curl-cffi>=0.7.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.2.2",
    "openai>=2.33.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
